1998-11-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* defobj.h (DefinedObject): Declare +lispin:expr: in creating
	phase. 
	(lispinQuotedExpr): Declare.
	(MAKE_OBJC_FUNCTION_NAME): Define (was confined to Archiver.m).

	* DefObject.m (output_type, collectRemaining): New internal
	functions.
	(lispinQuotedExpr): New function.
	([Object_s +lispin:expr:]): New method, put in creating phase.
	([Object_s -lispout:], [Object_s -lispin:]): New methods (latter
	is empty).
	
	* DefObject.h: Declare lispin:, +lispin:expr:, and lispout:.

	* Archiver.m: Make archiver statically typed.
	(processPairs, callLispIn, processMakeObjcPairs,
	processApplicationPairs, loadArchiverExpr): Change from methods
	to functions.
	([Archiver +load:fromPath:]): Call loadArchiverExpr.
	([Archiver -setPath:]): Put in Setting phase.
	([Archiver -lispout:]): Remove output of `make-objc' text, this
	must now be a part of the called lispout method.
	(archiverRegister, archiverUnregister): Remove internal methods
	and implement here.

	* Archiver.h (Archiver): Make clients public.
	Declare lispout:.

1998-11-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* defobj.m: Include defobj.h and defobj/Archiver.h.
	(_defobj_implement): Set up Arguments.
	(initDefobj): New function.

	* defobj.h (Dataset): New protocol.
	(Arguments): Add protocol (from objectbase).

	* Makefile.am (SRC, defobj_HEADERS): Add {Archiver,Arguments}.[mh].
	(version.h, install-data-local): New rules (formerly in objectbase).

1998-11-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* DefObject.m (_obj_dropAlloc): Use YES and NO instead of 1 and 0.
	(_obj_formatIDString): Use getClass macro instead of sending method
	and casting to Class.

1998-10-09  Alex Lancaster  <alex@santafe.edu>

	* Makefile.am (bin_SCRIPTS): Removed noinst_ prefix from make-h2x
	and m2h.  Used by gridturtle programs.

1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (REVISION): Increment. Swarm 1.3.1 released.
	