@@ -1,3 +1,8 @@
+1998-11-15  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* DefObject.m (output_type): Return next type position.
+	([Object_s -lispin:]): Initial key/value processing.
+
 1998-11-13  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* defobj.h (DefinedObject): Declare +lispin:expr: in creating
